--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -83,11 +83,11 @@ The idea of mixing HTML and JavaScript in the same file can be a rather contenti
 * By using JSX:
     * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar than JavaScript alone.
     * You can leverage the full power of JavaScript in HTML and avoid learning or using a templating language. JSX is not a templating solution. It is a declarative syntax used to express a tree structure of UI components.
-    * The compiler will find errors in your HTML you might otherwise miss.
+    * By adding a JSX transformation step you'll find errors in your HTML you might otherwise miss.
     * JSX promotes the idea of inline styles. Which can be a good thing.
 * Beware of JSX [Gotchas](http://facebook.github.io/react/docs/jsx-gotchas.html).
-* A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics. It is a separate thing from React itself.
-* JSX does not attempt to comply with any XML or HTML specification. JSX is designed as an ECMAScript feature and the similarity to XML/HTML is only at the surface (i.e. it looks like XML/HTML so you can just write something familiar)
+* JSX is a separate thing from React itself. JSX does not attempt to comply with any XML or HTML specifications. JSX is designed as an ECMAScript feature and the similarity to XML/HTML is only at the surface (i.e. it looks like XML/HTML so you can just write something familiar). A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
+* In JSX, `<foo-bar />`` alone is valid while alone `<foo-bar>` isn't. You have to close all tags, always.
 
 
 
