--- a/react-nodes/2.3.md
+++ b/react-nodes/2.3.md
@@ -1,66 +1,21 @@
-# Defining React node props
+# Rendering React nodes to DOM
 
-The second argument that is passed to `React.createElement()` is an object that will take React element node attributes/properties (aka props). These properties or props as React calls them are values associated with the React node.
+React provides the `ReactDOM.render()` function that can be used to render React nodes to the DOM. In the code example below I render the <li> and <foo-bar> React nodes to the DOM
 
-In the code example below I am defining a React `<li>` element node with four props. One is a non-standard HTML attribute and value (e.g. `foo:'bar'`) and the others are known HTML attributes.
+[source code](https://jsfiddle.net/LLz4p3ox/#tabs=js,result,html,resources)
 
-```js
-var reactNodeLi = React.createElement('li', 
-{
-    foo:'bar',
-    id:'li1',
-    'data-test':'test',
-    'aria-test':'test',
-    //note this is object of camel-cased style properties, not a string
-    style:{backgroundColor:'red'}
-}
-);
-```
-
-When the above code is rendered to an HTML page the actual HTML created will look like:
+Once rendered to the DOM, the updated HTML will look like so:
 
 ```html
-<li id="li1" data-test="test" aria-test="test" style="background-color:red;" data-reactid=".0"></li>
+<body>
+    <div id="app1"><li class="bar" data-reactid=".0">foo</li></div>
+    <div id="app2"><foo-bar classname="bar" children="foo" data-reactid=".1">foo</foo-bar></div>
+</body>
 ```
-
-What you need to remember is only [standard HTML attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes), `data-*`, and `aria-*` get passed to the real DOM from the Virtual DOM. 
-
-The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g. `this.props.foo`). We'll look more at non-standard HTML attributes/props in the chapter on creating React components.
+ 
 
 #### Notes
 
-* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
-* The `class` attribute has to be written `className`
-* The `for` attribute has to be written `htmlFor`
-* The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
-* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`)
-* The following are the HTML attributes that React supports (shown in camel-case):
-
-```HTML
-accept acceptCharset accessKey action allowFullScreen allowTransparency alt
-async autoComplete autoFocus autoPlay capture cellPadding cellSpacing challenge
-charSet checked classID className colSpan cols content contentEditable
-contextMenu controls coords crossOrigin data dateTime default defer dir
-disabled download draggable encType form formAction formEncType formMethod
-formNoValidate formTarget frameBorder headers height hidden high href hrefLang
-htmlFor httpEquiv icon id inputMode integrity is keyParams keyType kind label
-lang list loop low manifest marginHeight marginWidth max maxLength media
-mediaGroup method min minLength multiple muted name noValidate nonce open
-optimum pattern placeholder poster preload radioGroup readOnly rel required
-reversed role rowSpan rows sandbox scope scoped scrolling seamless selected
-shape size sizes span spellCheck src srcDoc srcLang srcSet start step style
-summary tabIndex target title type useMap value width wmode wrap
-```
-
-* The following are the SVG attributes that React supports (shown in camel-case):
-
-```svg
-clipPath cx cy d dx dy fill fillOpacity fontFamily
-fontSize fx fy gradientTransform gradientUnits markerEnd
-markerMid markerStart offset opacity patternContentUnits
-patternUnits points preserveAspectRatio r rx ry spreadMethod
-stopColor stopOpacity stroke  strokeDasharray strokeLinecap
-strokeOpacity strokeWidth textAnchor transform version
-viewBox x1 x2 x xlinkActuate xlinkArcrole xlinkHref xlinkRole
-xlinkShow xlinkTitle xlinkType xmlBase xmlLang xmlSpace y1 y2 y
-```
+* Any elements inside of the DOM element in which you are rendering will be replaced.
+* `ReactDOM.render()` does not modify the DOM element node in which you are rendering React.
+* Rendering to an HTML DOM is only one option with React, [other rendering APi's are available](https://facebook.github.io/react/docs/top-level-api.html#reactdomserver.rendertostring). For example, it is possible to render to a string (i.e. `ReactDOMServer.renderToString()` from ) on the server-side.
