--- a/react-nodes/2.4.md
+++ b/react-nodes/2.4.md
@@ -1,29 +1,66 @@
-# Using React node element factories
+# Defining React node props
 
-React provides built-in shortcuts for creating commonly used element nodes. These shortcuts are called React element factories. 
+The second argument that is passed to `React.createElement()` is an object that will take React element node attributes/properties (aka props). These properties or props as React calls them are values associated with the React node.
 
-Using a factory, the React element node `<li>one</li>` can be created like so:
-
-```js
-// uses React.DOM.li(props, children);
-var reactNodeLi = React.DOM.li({id:'li1'}, 'one');
-```
-
-instead of using:
+In the code example below I am defining a React `<li>` element node with four props. One is a non-standard HTML attribute and value (e.g. `foo:'bar'`) and the others are known HTML attributes.
 
 ```js
-// uses React.createElement(type, prop, children)
-var reactNodeLi = React.createElement('li', null, 'one');
+var reactNodeLi = React.createElement('li', 
+{
+    foo:'bar',
+    id:'li1',
+    'data-test':'test',
+    'aria-test':'test',
+    //note this is object of camel-cased style properties, not a string
+    style:{backgroundColor:'red'}
+}
+);
 ```
 
-Below I list out all of the built in node factories:
+When the above code is rendered to an HTML page the actual HTML created will look like:
 
+```html
+<li id="li1" data-test="test" aria-test="test" style="background-color:red;" data-reactid=".0"></li>
 ```
-a,abbr,address,area,article,aside,audio,b,base,bdi,bdo,big,blockquote,body,br,button,canvas,caption,cite,code,col,colgroup,data,datalist,dd,del,details,dfn,dialog,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,head,header,hgroup,hr,html,i,iframe,img,input,ins,kbd,keygen,label,legend,li,link,main,map,mark,menu,menuitem,meta,meter,nav,noscript,object,ol,optgroup,option,output,p,param,picture,pre,progress,q,rp,rt,ruby,s,samp,script,section,select,small,source,span,strong,style,sub,summary,sup,table,tbody,td,textarea,tfoot,th,thead,time,title,tr,track,u,ul,var,video,wbr,circle,clipPath,defs,ellipse,g,image,line,linearGradient,mask,path,pattern,polygon,polyline,radialGradient,rect,stop,svg,text,tspa
-```
+
+What you need to remember is only [standard HTML attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes), `data-*`, and `aria-*` get passed to the real DOM from the Virtual DOM. 
+
+The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g. `this.props.foo`). We'll look more at non-standard HTML attributes/props in the chapter on creating React components.
 
 #### Notes
 
-* If you are using JSX you have no need for factories
-* You can build your [own custom factories](http://facebook.github.io/react/docs/top-level-api.html#react.createfactory) using `React.createFactory(type)`.
+* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
+* The `class` attribute has to be written `className`
+* The `for` attribute has to be written `htmlFor`
+* The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
+* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`)
+* The following are the HTML attributes that React supports (shown in camel-case):
 
+```HTML
+accept acceptCharset accessKey action allowFullScreen allowTransparency alt
+async autoComplete autoFocus autoPlay capture cellPadding cellSpacing challenge
+charSet checked classID className colSpan cols content contentEditable
+contextMenu controls coords crossOrigin data dateTime default defer dir
+disabled download draggable encType form formAction formEncType formMethod
+formNoValidate formTarget frameBorder headers height hidden high href hrefLang
+htmlFor httpEquiv icon id inputMode integrity is keyParams keyType kind label
+lang list loop low manifest marginHeight marginWidth max maxLength media
+mediaGroup method min minLength multiple muted name noValidate nonce open
+optimum pattern placeholder poster preload radioGroup readOnly rel required
+reversed role rowSpan rows sandbox scope scoped scrolling seamless selected
+shape size sizes span spellCheck src srcDoc srcLang srcSet start step style
+summary tabIndex target title type useMap value width wmode wrap
+```
+
+* The following are the SVG attributes that React supports (shown in camel-case):
+
+```svg
+clipPath cx cy d dx dy fill fillOpacity fontFamily
+fontSize fx fy gradientTransform gradientUnits markerEnd
+markerMid markerStart offset opacity patternContentUnits
+patternUnits points preserveAspectRatio r rx ry spreadMethod
+stopColor stopOpacity stroke  strokeDasharray strokeLinecap
+strokeOpacity strokeWidth textAnchor transform version
+viewBox x1 x2 x xlinkActuate xlinkArcrole xlinkHref xlinkRole
+xlinkShow xlinkTitle xlinkType xmlBase xmlLang xmlSpace y1 y2 y
+```
