--- a/react-nodes/2.3.md
+++ b/react-nodes/2.3.md
@@ -1,6 +1,6 @@
 # Rendering React nodes to DOM
 
-React provides the `ReactDOM.render()` function that can be used to render React nodes to the DOM. In the code example below I render the <li> and <foo-bar> React nodes to the DOM
+React provides the `ReactDOM.render()` function that can be used to render React nodes to the DOM. In the code example below I render the `'li'` and `'foo-bar'` React nodes to the DOM
 
 [source code](https://jsfiddle.net/LLz4p3ox/#tabs=js,result,html,resources)
 
@@ -12,10 +12,10 @@ Once rendered to the DOM, the updated HTML will look like so:
     <div id="app2"><foo-bar classname="bar" children="foo" data-reactid=".1">foo</foo-bar></div>
 </body>
 ```
- 
 
 #### Notes
 
-* Any elements inside of the DOM element in which you are rendering will be replaced.
+* Any DOM nodes inside of the DOM element in which you are rendering will be replaced.
 * `ReactDOM.render()` does not modify the DOM element node in which you are rendering React.
 * Rendering to an HTML DOM is only one option with React, [other rendering APi's are available](https://facebook.github.io/react/docs/top-level-api.html#reactdomserver.rendertostring). For example, it is possible to render to a string (i.e. `ReactDOMServer.renderToString()` from ) on the server-side.
+* Re-rendering to the same DOM element will only update the current child nodes if a change (i.e. diff) has occurred or a new child node have been added.
