--- a/react-jsx/3.3.md
+++ b/react-jsx/3.3.md
@@ -17,6 +17,6 @@ Once rendered to the DOM, the updated HTML will look like so:
 
 * Any DOM nodes inside of the DOM element in which you are rendering will be replaced.
 * `ReactDOM.render()` does not modify the DOM element node in which you are rendering React.
-* Rendering to an HTML DOM is only one option with React, [other rendering APi's are available](https://facebook.github.io/react/docs/top-level-api.html#reactdomserver.rendertostring). For example, it is possible to render to a string (i.e. `ReactDOMServer.renderToString()` from ) on the server-side.
+* Rendering to an HTML DOM is only one option with React, [other rendering APi's are available](https://facebook.github.io/react/docs/top-level-api.html#reactdomserver.rendertostring). For example, it is also possible to render to a string (i.e. `ReactDOMServer.renderToString()` from ) on the server-side.
 * Re-rendering to the same DOM element will only update the current child nodes if a change (i.e. diff) has occurred or a new child node have been added.
 
