--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -76,9 +76,14 @@ You can think of JSX as a shorthand for calling `React.createElement()`.
 
 The idea of mixing HTML and JavaScript in the same file can be a rather contentious topic. Ignore the debate. Use it if you find it helpful. If not, write the React code required to create React nodes. Your choice. My opinion is that JSX provides a concise and familiar syntax for defining a tree structure with attributes that does not require learning a templating language or leaving JavaScript. Both of which are can be a win when building large applications.
 
+ It should be obvious but JSX is easier to read and write over large pyramids of JavaScript function calls or object literals. Additionally the React team clearly believes JSX is better suited for defining UI's than a traditional templating (e.g. Hanlderbars) solution: 
+
+ > markup and the code that generates it are intimately tied together. Additionally, display logic is often very complex and using template languages to express it becomes cumbersome. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs.
+ > 
+
 #### Notes
 
-* It should be obvious but JSX is easier to read and write over large pyramids of JavaScript function calls or object literals. Additionally the React team clearly believes that, "markup and the code that generates it are intimately tied together. Additionally, display logic is often very complex and using template languages to express it becomes cumbersome. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs."
+
 * The Babel tool is a [subjective selection](https://facebook.github.io/react/blog/2015/09/10/react-v0.14-rc1.html#compiler-optimizations) from the React team for transforming ES* code and JSX syntax to ES5 code. Learn more about Babel by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md) by the React team for transforming JSX to JavaScript.
 * By using JSX:
     * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar than JavaScript alone.
