--- a/react-jsx/3.2.md
+++ b/react-jsx/3.2.md
@@ -1,6 +1,6 @@
 # Creating React nodes with JSX
 
-Working off the knowledge given in the previous chapter you should be familiar with creating React nodes using the `React.createElement()` function. For example, using this function one can create React nodes that are both HTML DOM nodes and custom HTML DOM nodes. Below I use this familiar function to create two React nodes. 
+Working off the knowledge given in the previous chapter you should be familiar with creating React nodes using the `React.createElement()` function. For example, using this function one can create React nodes which both represent  HTML DOM nodes and custom HTML DOM nodes. Below I use this familiar function to create two React nodes. 
 
 ```js
 //React node, which represents an actual HTML DOM node
