--- a/react-jsx/3.4.md
+++ b/react-jsx/3.4.md
@@ -1,5 +1,42 @@
 # Using JavaScript expressions in JSX
 
+Hopefully by now it's obvious that JSX is just syntactical sugar that gets converted to real JavaScript. But what happens when you want to intermingle real JavaScript code within JSX? To write a JavaScript expression inline with JSX you will have to surround the JavaScript code in `{ }` brackets. 
+
+In the React/JSX code below I am mixing JavaScript expressions, surround by `{ }` among the JSX that will get evaluated after the JSX is transformed.
+
+[source code](https://jsfiddle.net/9x24jp95/#tabs=js,result,html,resources)
+
+The JSX transformation will result in the follow:
+
+```js
+'use strict';
+
+var label = '2 + 2';
+var inputType = 'input';
+
+var reactNode = React.createElement(
+  'label',
+  null,
+  label,
+  ' = ',
+  React.createElement('input', { type: '{inputType}', value: 2 + 2 })
+);
+
+ReactDOM.render(reactNode, document.getElementById('app1'));
+```
+
+Once this code runs is parsed by a JavaScript engine (i.e. a browser) the JavaScript expression are evaluated resulting int he following HTML:
+
+```html
+<div id="app1">
+    <label data-reactid=".0"><span data-reactid=".0.0">2 + 2</span><span data-reactid=".0.1"> = </span><input type="{input}" value="4" data-reactid=".0.2"></label>
+</div>
+```
+
+Nothing that complicated is going on here once you realize that the brackets basically escape the JSX. The `{ }` brackets simply tells JSX that the content is JavaScript so leave it alone so it can eventually be parsed by a JavaScript engine.
+
+
+
 
 
 
