--- a/react-jsx/3.4.md
+++ b/react-jsx/3.4.md
@@ -9,8 +9,6 @@ In the React/JSX code below I am mixing JavaScript expressions, surround by `{ }
 The JSX transformation will result in the follow:
 
 ```js
-'use strict';
-
 var label = '2 + 2';
 var inputType = 'input';
 
@@ -19,7 +17,7 @@ var reactNode = React.createElement(
   null,
   label,
   ' = ',
-  React.createElement('input', { type: '{inputType}', value: 2 + 2 })
+  React.createElement('input', { type: inputType, value: 2 + 2 })
 );
 
 ReactDOM.render(reactNode, document.getElementById('app1'));
@@ -29,7 +27,7 @@ Once this code runs is parsed by a JavaScript engine (i.e. a browser) the JavaSc
 
 ```html
 <div id="app1">
-    <label data-reactid=".0"><span data-reactid=".0.0">2 + 2</span><span data-reactid=".0.1"> = </span><input type="{input}" value="4" data-reactid=".0.2"></label>
+    <label data-reactid=".0"><span data-reactid=".0.0">2 + 2</span><span data-reactid=".0.1"> = </span><input type="input" value="4" data-reactid=".0.2"></label>
 </div>
 ```
 
