--- a/react-jsx/3.5.md
+++ b/react-jsx/3.5.md
@@ -1,7 +1,14 @@
 # Using JavaScript comments in JSX
 
+You can place JavaScript comments anywhere in React/JSX you want except locations where JSX might expect a child element or text node. In this situation you'll have to escape the comment using `{ }`` so that JSX knows to pass that on as actual JavaScript.
 
+Examine the code below, read the comments so you understand where you'll have to tell JSX to pass along a JS comment instead of creating a child node.
 
+```js
+var reactNode = (<label>{label} = 
+                  <input /*comment*/ type={inputType} value={2+2} />{/*comment*/}
+                  </label>); //comment
+```
 
 
 
