--- a/react-jsx/3.5.md
+++ b/react-jsx/3.5.md
@@ -6,11 +6,20 @@ Examine the code below, read the comments so you understand where you'll have to
 
 ```js
 //Note where JS comments must be encapsulated inside of { }
-var reactNode = (/*comment*/ <label>{label} {/* use {} here to comment*/} = 
-                  <input /*comment*/ type={inputType} value={2+2} />{/* use {} here to comment*/}
-                  </label>
-                ); //comment
+var reactNode = <div /*comment*/>{/* use {} here to comment*/}</div>;
 ```
+
+In the above code if I had not wrapped the comment inside of the <div> with `{ }` brackets then Babel would have converted the comment to a text node. The outcome, without the `{ }` would be:
+
+```js
+var reactNode = React.createElement(
+  "div",
+  null,
+  "/* use ",
+  " here to comment*/"
+);
+```
+
 
 
 
