--- a/react-jsx/3.5.md
+++ b/react-jsx/3.5.md
@@ -8,7 +8,7 @@ Examine the code below, make sure you understand where you'll have to tell JSX t
 var reactNode = <div /*comment*/>{/* use {} here to comment*/}</div>;
 ```
 
-In the above code if I had not wrapped the comment inside of the `<div>`` with `{ }` brackets then Babel would have converted the comment to a React text node. The outcome, unintentionally, without the `{ }` would be:
+In the above code if I had not wrapped the comment inside of the `<div>` with `{ }` brackets then Babel would have converted the comment to a React text node. The outcome, unintentionally, without the `{ }` would be:
 
 ```js
 var reactNode = React.createElement(
