--- a/react-jsx/3.5.md
+++ b/react-jsx/3.5.md
@@ -19,7 +19,7 @@ var reactNode = React.createElement(
 );
 ```
 
-Which would result in HTML that had unintended text nodes.
+Which would result in the following HTML that would have unintended text nodes.
 
 ```html
 <div data-reactid=".0">
