--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -1,6 +1,18 @@
-# Using inline CSS styles in JSX
+ # Using inline CSS styles in JSX
 
+In order to define inline styles on JSX (and thus React nodes) you pass the `style` prop/attribute a reference to a JavaScript object containing CSS properties and values.
 
+In the code below first setup a JavaScript object containing my inlines styles, then I use the { } brackets to reference the object. 
+
+[source code](https://jsfiddle.net/4pw9w9h7/#tabs=js,result,html,resources)
+
+When the JSX is transformed by Babel the resulting HTML will be:
+
+```html
+<div style="color:red;background-color:black;font-weight:bold;" data-reactid=".0">test</div>
+```
+
+Notice that, the CSS properties are in a camelCased form [similar to what is used when writing CSS in JavaScript due to the fact that JavaScript does not allow hyphens in names](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). 
 
 
 
