--- a/react-basic-setup/1.4.md
+++ b/react-basic-setup/1.4.md
@@ -8,6 +8,6 @@ Below is an embedded JSFiddle containing the `HelloMessage` component used throu
 
 Note that the "Babel" tab indicates the JavaScript written into this tab will be transformed by Babel (similar too, if not directly using `browser.js`). As well, the "Resources" tab will show that JSFiddle is pulling in the `react.js` and `react-dom.js` files.
 
-It will be assumed that after reading this chapter that you understand the basic requirements to setup React and Babel. And that while JSFiddle does not make it obvious, this is the same exact setup being used by JSFiddle to run React code.
+It will be assumed that after reading this chapter that you understand the basic requirements to setup React and Babel via `browser.js`. And that while JSFiddle does not make it obvious, this is the same exact setup being used by JSFiddle to run React code.
 
 JSFiddle will be used through out this rest of this book to show the results of React code, transformed by Babel, as it would be parsed by a browser.
