--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -1,18 +1,29 @@
  # Using inline CSS styles in JSX
 
-In order to define inline styles on JSX (and thus React nodes) you pass the `style` prop/attribute a reference to a JavaScript object containing CSS properties and values.
+In order to define inline styles on React nodes you need to pass the `style` prop/attribute a reference to a JavaScript object containing CSS properties and values.
 
-In the code below first setup a JavaScript object containing my inlines styles, then I use the { } brackets to reference the object. 
+In the code below I first setup a JavaScript object, named `styles`, containing inline styles. Then I use the `{ }` brackets to reference the object that should be used for the value of the style prop/attribute (e.g. `style={styles}`).
 
 [source code](https://jsfiddle.net/4pw9w9h7/#tabs=js,result,html,resources)
 
-When the JSX is transformed by Babel the resulting HTML will be:
+Notice that, the CSS properties are in a camelCased form [similar to what is used when writing CSS in JavaScript due to the fact that JavaScript does not allow hyphens in names](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). 
+
+When the React/JSX code is transformed by Babel, and then parsed by a JavaScript engine, the resulting HTML will be:
 
 ```html
 <div style="color:red;background-color:black;font-weight:bold;" data-reactid=".0">test</div>
 ```
 
-Notice that, the CSS properties are in a camelCased form [similar to what is used when writing CSS in JavaScript due to the fact that JavaScript does not allow hyphens in names](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). 
+#### Notes
+
+* Vendor prefixes other than ms should begin with a capital letter. This is why WebkitTransition has an uppercase "W".
+* camelCased CSS properties shouldn't be a suprise given this is how it is done when accessing properties on DOM nodes from JS (e.g. `document.body.style.backgroundImage`)
+* When specifying a pixel value React will automatically append the string "px" for you after your number value except for the following properties:
+
+```js
+columnCount fillOpacity flex flexGrow flexShrink fontWeight lineClamp lineHeight opacity order orphans strokeOpacity widows zIndex zoom
+```
+
 
 
 
