--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -8,7 +8,7 @@ In the code below I first setup a JavaScript object, named `styles`, containing 
 
 Notice that, the CSS properties are in a camelCased form [similar to what is used when writing CSS in JavaScript due to the fact that JavaScript does not allow hyphens in names](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). 
 
-When the React/JSX code is transformed by Babel, and then parsed by a JavaScript engine, the resulting HTML will be:
+When the above React/JSX code is transformed by Babel, and then parsed by a JavaScript engine, the resulting HTML will be:
 
 ```html
 <div style="color:red;background-color:black;font-weight:bold;" data-reactid=".0">test</div>
