--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -86,7 +86,7 @@ It should be obvious that React nodes are just JavaScript objects that represent
 * The `type` argument passed to `React.createElement(type,props,children)` can be a string indicating a standard HTML element (e.g. `'li'` = `<li></li>`) or a custom element (e.g. `'foo-bar'` = `<foo-bar></foo-bar>`.
 * These are the standard HTML elements that React supports:
 
-```HTML
+```html
 a abbr address area article aside audio b base bdi bdo big blockquote body br
 button canvas caption cite code col colgroup data datalist dd del details dfn
 dialog div dl dt em embed fieldset figcaption figure footer form h1 h2 h3 h4 h5
