--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -20,7 +20,7 @@ When the above React/JSX code is transformed by Babel, and then parsed by a Java
 * camelCased CSS properties shouldn't be a suprise given this is how it is done when accessing properties on DOM nodes from JS (e.g. `document.body.style.backgroundImage`)
 * When specifying a pixel value React will automatically append the string "px" for you after your number value except for the following properties:
 
-```js
+```html
 columnCount fillOpacity flex flexGrow flexShrink fontWeight lineClamp lineHeight opacity order orphans strokeOpacity widows zIndex zoom
 ```
 
