--- a/react-jsx/3.2.md
+++ b/react-jsx/3.2.md
@@ -1,6 +1,6 @@
 # Creating React nodes with JSX
 
-Working off the knowledge given in the previous chapter you should be familiar with creating React nodes using the `React.createElement()` function. For example, using this function one can create React nodes which both represent  HTML DOM nodes and custom HTML DOM nodes. Below I use this familiar function to create two React nodes. 
+Working off the knowledge given in the previous chapter you should be familiar with creating React nodes using the `React.createElement()` function. For example, using this function one can create React nodes which both represent  HTML DOM nodes and custom HTML DOM nodes. Below I use this familiar function to create two React nodes.
 
 ```js
 //React node, which represents an actual HTML DOM node
@@ -10,7 +10,7 @@ var HTMLLi = React.createElement('li', {className:'bar'}, 'foo');
 var HTMLCustom = React.createElement('foo-bar', {className:'bar'}, 'foo');
 ```
 
-To use JSX instead of `React.createElement()` to create these React nodes one just has to replace `React.createElement()` function calls with the HTML/XML like tags which represent the HTML you'd like the virtual DOM to spit out. The above code can be written in JSX like so.
+To use JSX instead (assuming you have Babel setup) of `React.createElement()` to create these React nodes one just has to replace `React.createElement()` function calls with the HTML/XML like tags which represent the HTML you'd like the virtual DOM to spit out. The above code can be written in JSX like so.
 
 ```js
 //React node, which represents an actual HTML DOM node
@@ -20,7 +20,7 @@ var HTMLLi = <li className="bar">foo</li>;
 var HTMLCustom = <foo-bar className="bar" >foo</foo-bar>;
 ```
 
-Notice that the JSX is not in a string format and can just be writing as if you are writing it inside of an `.html` file. As stated many times already JSX is then transformed back into the `React.createElement()` functions calls by Babel. You can see the transformation occurring in the following JSFiddle.
+Notice that the JSX is not in a JavaScript string format and can just be writing as if you are writing it inside of an `.html` file. As stated many times already JSX is then transformed back into the `React.createElement()` functions calls by Babel. You can see the transformation occurring in the following JSFiddle (i.e. Babel is transforming JSX to JavaScript, then React is creating DOM nodes).
 
 [source code](https://jsfiddle.net/wc6dtkov/#tabs=js,result,html,resources)
 
@@ -32,6 +32,8 @@ If you were to examine the actual HTML produced in the above JSfiddle it would l
     <div id="app2"><foo-bar class="bar" data-reactid=".1">foo</foo-bar></div>
 </body>
 ```
+
+Creating React nodes using JSX is as simple as writing HTML like code in your JavaScript files.
 
 #### Notes
 
@@ -58,9 +60,3 @@ reversed role rowSpan rows sandbox scope scoped scrolling seamless selected
 shape size sizes span spellCheck src srcDoc srcLang srcSet start step style
 summary tabIndex target title type useMap value width wmode wrap
 ```
-
-
-
-
-
-
