--- a/react-jsx/3.3.md
+++ b/react-jsx/3.3.md
@@ -13,10 +13,12 @@ Once rendered to the DOM, the updated HTML will look like so:
 </body>
 ```
 
+Just remember that Babel is taking the JSX in your JavaScript files transforming it to React nodes (i.e. `React.createElement()` functions calls) then using these nodes created by React (i.e. the Virtual DOM) as a template for creating a real html DOM branch. The part where the React nodes are turned into the real DOM nodes and added to the DOM in an HTML page occurs when `ReactDOM.render()` is called.
+
 #### Notes
 
-* Any DOM nodes inside of the DOM element in which you are rendering will be replaced.
+* Any DOM nodes inside of the DOM element in which you are rendering will be removed/replaced.
 * `ReactDOM.render()` does not modify the DOM element node in which you are rendering React.
 * Rendering to an HTML DOM is only one option with React, [other rendering APi's are available](https://facebook.github.io/react/docs/top-level-api.html#reactdomserver.rendertostring). For example, it is also possible to render to a string (i.e. `ReactDOMServer.renderToString()`) on the server-side.
 * Re-rendering to the same DOM element will only update the current child nodes if a change (i.e. diff) has occurred or a new child node have been added.
-
+* The `ReactDOM.render()` function does not directly render JSX it renders the transformation of JSX to React code.
