--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -2,14 +2,14 @@
 
 JSX is an XML/HTML-like syntax used by React that extends ECMAScript so that XML/HTML-like text can co-exist with JavaScript/React code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript objects that a JavaScript engine will parse.
 
-Basically, by using JSX you can write concise HTML structures (DOM like tree structures) in the same file as you write JavaScript code, then Babel will transform these expressions into actual JavaScript code.
+Basically, by using JSX you can write concise HTML structures (DOM like tree structures) in the same file as you write JavaScript code, then Babel will transform these expressions into actual JavaScript code. Unlike the past, instead of putting JavaScript into HTML JSX allows us to put HTML into JavaScript.
 
 By using JSX one can write the following React JavaScript code:
 
 ```js
 var Nav = React.createClass({ //define MySelect component
     render: function(){
-      return ( 
+      return (
          <ul id="nav">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -76,25 +76,20 @@ You can think of JSX as a shorthand for calling `React.createElement()`.
 
 The idea of mixing HTML and JavaScript in the same file can be a rather contentious topic. Ignore the debate. Use it if you find it helpful. If not, write the React code required to create React nodes. Your choice. My opinion is that JSX provides a concise and familiar syntax for defining a tree structure with attributes that does not require learning a templating language or leaving JavaScript. Both of which are can be a win when building large applications.
 
- It should be obvious but JSX is easier to read and write over large pyramids of JavaScript function calls or object literals. Additionally the React team clearly believes JSX is better suited for defining UI's than a traditional templating (e.g. Hanlderbars) solution: 
+ It should be obvious but JSX is easier to read and write over large pyramids of JavaScript function calls or object literals (e.g. contrast the two code samples in this section). Additionally the React team clearly believes JSX is better suited for defining UI's than a traditional templating (e.g. Hanlderbars) solution:
 
  > markup and the code that generates it are intimately tied together. Additionally, display logic is often very complex and using template languages to express it becomes cumbersome. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs.
- > 
+ >
 
 #### Notes
 
 
-* The Babel tool is a [subjective selection](https://facebook.github.io/react/blog/2015/09/10/react-v0.14-rc1.html#compiler-optimizations) from the React team for transforming ES* code and JSX syntax to ES5 code. Learn more about Babel by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md) by the React team for transforming JSX to JavaScript.
-* By using JSX:
+* The Babel tool is a [subjective selection](https://facebook.github.io/react/blog/2015/09/10/react-v0.14-rc1.html#compiler-optimizations) from the React team for transforming ES* code and JSX syntax to ES5 code. You can learn more about Babel at [http://babeljs.io/](http://babeljs.io/) or by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md).
+* The merits of JSX in four bullet points:
     * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar than JavaScript alone.
     * You can leverage the full power of JavaScript in HTML and avoid learning or using a templating language. JSX is not a templating solution. It is a declarative syntax used to express a tree structure of UI components.
     * By adding a JSX transformation step you'll find errors in your HTML you might otherwise miss.
     * JSX promotes the idea of inline styles. Which can be a good thing.
 * Beware of JSX [Gotchas](http://facebook.github.io/react/docs/jsx-gotchas.html).
 * JSX is a separate thing from React itself. JSX does not attempt to comply with any XML or HTML specifications. JSX is designed as an ECMAScript feature and the similarity to XML/HTML is only at the surface (i.e. it looks like XML/HTML so you can just write something familiar). A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
-* In JSX, `<foo-bar />`` alone is valid while alone `<foo-bar>` isn't. You have to close all tags, always.
-
-
-
-
-
+* In JSX, `<foo-bar />` alone is valid while alone `<foo-bar>` isn't. You have to close all tags, always.
