--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -6,7 +6,7 @@ In the code below I first setup a JavaScript object, named `styles`, containing 
 
 [source code](https://jsfiddle.net/4pw9w9h7/#tabs=js,result,html,resources)
 
-Notice that, the CSS properties are in a camelCased form [similar to what is used when writing CSS in JavaScript due to the fact that JavaScript does not allow hyphens in names](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). 
+Notice that, the CSS properties are in a camelCased form [similar to what is used when writing CSS in JavaScript due to the fact that JavaScript does not allow hyphens in names](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference).
 
 When the above React/JSX code is transformed by Babel, and then parsed by a JavaScript engine, the resulting HTML will be:
 
@@ -17,15 +17,10 @@ When the above React/JSX code is transformed by Babel, and then parsed by a Java
 #### Notes
 
 * Vendor prefixes other than ms should begin with a capital letter. This is why WebkitTransition has an uppercase "W".
-* camelCased CSS properties shouldn't be a suprise given this is how it is done when accessing properties on DOM nodes from JS (e.g. `document.body.style.backgroundImage`)
+* CamelCased CSS properties shouldn't be a suprise given this is how it is done when accessing properties on DOM nodes from JS (e.g. `document.body.style.backgroundImage`)
 * When specifying a pixel value React will automatically append the string "px" for you after your number value except for the following properties:
 
 ```html
-columnCount fillOpacity flex flexGrow flexShrink fontWeight lineClamp lineHeight opacity order orphans strokeOpacity widows zIndex zoom
+columnCount fillOpacity flex flexGrow flexShrink fontWeight lineClamp lineHeight
+opacity order orphans strokeOpacity widows zIndex zoom
 ```
-
-
-
-
-
-
