--- a/react-nodes/2.3.md
+++ b/react-nodes/2.3.md
@@ -1,4 +1,4 @@
-# Rendering React nodes to DOM
+# Rendering to DOM
 
 React provides the `ReactDOM.render()` function that can be used to render React nodes to the DOM. In the code example below I render the `'li'` and `'foo-bar'` React nodes to the DOM
 
