--- a/react-nodes/2.4.md
+++ b/react-nodes/2.4.md
@@ -1,11 +1,19 @@
-# Defining React node props
+[# Defining attributes/props
 
-The second argument that is passed to `React.createElement()` is an object that will take React element node attributes/properties (aka props). These properties or props as React calls them are values associated with the React node.
+The second argument (i.e. `props`) that is passed to `React.createElement()` is an object that will take React element node attributes/properties (aka props). These properties or props, as React calls them, are values associated with the React node.
+
+Props take on several roles:
+
+1. Props can become HTML attributes.
+2. Props become values stored in a `prop` object as a property of `React.createElement()` instances (i.e. `this.props.[NAME OF PROP]`).
+3. A few special props have side effects (e.g. [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html))
+
+In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes. However, certain props added to React element nodes don't get passed on to the real DOM at HTML attributes. More on that in a minute, for now lets take a look at defining React attributes/props.
 
 In the code example below I am defining a React `<li>` element node with four props. One is a non-standard HTML attribute and value (e.g. `foo:'bar'`) and the others are known HTML attributes.
 
 ```js
-var reactNodeLi = React.createElement('li', 
+var reactNodeLi = React.createElement('li',
 {
     foo:'bar',
     id:'li1',
@@ -23,9 +31,11 @@ When the above code is rendered to an HTML page the actual HTML created will loo
 <li id="li1" data-test="test" aria-test="test" style="background-color:red;" data-reactid=".0"></li>
 ```
 
-What you need to remember is only [standard HTML attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes), `data-*`, and `aria-*` get passed to the real DOM from the Virtual DOM. 
+What you need to realize is only [standard HTML attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes), `data-*`, and `aria-*` get passed to the real DOM from the Virtual DOM.
 
 The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g. `this.props.foo`). We'll look more at non-standard HTML attributes/props in the chapter on creating React components.
+
+React attributes/props not only translate to real HTML attributes props but can also be used to configure and passthrough values to child React nodes (i.e. React node communication). This aspect of React nodes will be covered in the React props & state chapter.
 
 #### Notes
 
@@ -33,7 +43,9 @@ The `foo` attribute/prop does not show up in the real DOM. This non-standard HTM
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
 * The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
-* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`)
+* HTML form elements (e.g. `<input></input>`, `<textarea></textarea>` etc...) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
+* React offers the [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html) attributes/props that don't exist in DOM and take on a unique role/function.
+* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`) which differs from how they are written in HTML.
 * The following are the HTML attributes that React supports (shown in camel-case):
 
 ```HTML
