--- a/react-nodes/2.5.md
+++ b/react-nodes/2.5.md
@@ -1,6 +1,6 @@
-# Using React node element factories
+# Using element factories
 
-React provides built-in shortcuts for creating commonly used element nodes. These shortcuts are called React element factories. 
+React provides built-in shortcuts for creating commonly used element nodes. These shortcuts are called React element factories.
 
 Using a factory, the React element node `<li>one</li>` can be created like so:
 
@@ -26,4 +26,3 @@ a,abbr,address,area,article,aside,audio,b,base,bdi,bdo,big,blockquote,body,br,bu
 
 * If you are using JSX you have no need for factories
 * You can build your [own custom factories](http://facebook.github.io/react/docs/top-level-api.html#react.createfactory) using `React.createFactory(type)`.
-
