--- a/react-nodes/2.4.md
+++ b/react-nodes/2.4.md
@@ -1,6 +1,6 @@
-[# Defining attributes/props
+# Defining attributes/props
 
-The second argument (i.e. `props`) that is passed to `React.createElement()` is an object that will take React element node attributes/properties (aka props). These properties or props, as React calls them, are values associated with the React node.
+The second argument (i.e. `props`) that is passed to `React.createElement(type, props. children)` is an object that will take React element node attributes/properties (aka props). These properties or props, as React calls them, are values associated with the React node.
 
 Props take on several roles:
 
@@ -8,7 +8,7 @@ Props take on several roles:
 2. Props become values stored in a `prop` object as a property of `React.createElement()` instances (i.e. `this.props.[NAME OF PROP]`).
 3. A few special props have side effects (e.g. [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html))
 
-In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes. However, certain props added to React element nodes don't get passed on to the real DOM at HTML attributes. More on that in a minute, for now lets take a look at defining React attributes/props.
+In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes. However, certain props added to React element nodes don't get passed on to the real DOM as HTML attributes. More on that in a minute, for now lets take a look at defining React attributes/props.
 
 In the code example below I am defining a React `<li>` element node with four props. One is a non-standard HTML attribute and value (e.g. `foo:'bar'`) and the others are known HTML attributes.
 
@@ -33,9 +33,9 @@ When the above code is rendered to an HTML page the actual HTML created will loo
 
 What you need to realize is only [standard HTML attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes), `data-*`, and `aria-*` get passed to the real DOM from the Virtual DOM.
 
-The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g. `this.props.foo`). We'll look more at non-standard HTML attributes/props in the chapter on creating React components.
+The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g. `this.props.foo`).
 
-React attributes/props not only translate to real HTML attributes props but can also be used to configure and passthrough values to child React nodes (i.e. React node communication). This aspect of React nodes will be covered in the React props & state chapter.
+React attributes/props not only translate to real HTML attributes props but as previously mentioned can also as configuration values as well as values that are passed child to React element nodes (i.e. React node communication). This aspect of React nodes will be covered in the React props & state chapter.
 
 #### Notes
 
