--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -7,69 +7,59 @@ Basically, by using JSX you can write concise HTML structures (DOM like tree str
 By using JSX one can write the following React JavaScript code:
 
 ```js
-var Nav = React.createClass({ //define MySelect component
-    render: function(){
-      return (
-         <ul id="nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Clients</a></li>
-            <li><a href="#">Contact Us</a></li>
-         </ul>
-      );
-    }
-});
+var nav = (
+    <ul id="nav">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Clients</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+)
 ```
 
 And Babel will transform it into this:
 
 ```js
-var Nav = React.createClass({
-   displayName: "Nav",
-   //define MySelect component
-   render: function render() {
-      return React.createElement(
-         "ul",
-         { id: "nav" },
-         React.createElement(
-            "li",
-            null,
-            React.createElement(
-               "a",
-               { href: "#" },
-               "Home"
-            )
-         ),
-         React.createElement(
-            "li",
-            null,
-            React.createElement(
-               "a",
-               { href: "#" },
-               "About"
-            )
-         ),
-         React.createElement(
-            "li",
-            null,
-            React.createElement(
-               "a",
-               { href: "#" },
-               "Clients"
-            )
-         ),
-         React.createElement(
-            "li",
-            null,
-            React.createElement(
-               "a",
-               { href: "#" },
-               "Contact Us"
-            )
-         )
-      );
-   }
-});
+var nav = React.createElement(
+   "ul",
+   { id: "nav" },
+   React.createElement(
+      "li",
+      null,
+      React.createElement(
+         "a",
+         { href: "#" },
+         "Home"
+      )
+   ),
+   React.createElement(
+      "li",
+      null,
+      React.createElement(
+         "a",
+         { href: "#" },
+         "About"
+      )
+   ),
+   React.createElement(
+      "li",
+      null,
+      React.createElement(
+         "a",
+         { href: "#" },
+         "Clients"
+      )
+   ),
+   React.createElement(
+      "li",
+      null,
+      React.createElement(
+         "a",
+         { href: "#" },
+         "Contact Us"
+      )
+   )
+);
 ```
 
 You can think of JSX as a shorthand for calling `React.createElement()`.
