--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -2,15 +2,15 @@
 
 In most cases developers using React will favor JSX and use it to create React nodes. Regardless of this fact in this chapter we are going to examine how React nodes can be created without JSX, using only JavaScript. The next chapter will discuss creating React nodes using JSX.
 
-Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node (i.e. an html element e.g. `<li>` or custom element e.g. `<my-li>`).  
+Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node (i.e. type = an html element e.g. `<li>` or custom element e.g. `<my-li>`).  
 
-Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` (aka React text) and an `id` of `li1`. 
+Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` (aka React text) and an `id` of `li1`.
 
 ```js
 var reactNodeLi = React.createElement('li', {id:'li1'}, 'one');
 ```
 
-Notice that the first argument defines which HTML element I want to represent. The second argument defines the attributes/props on the `<li>`.  And, the third argument defines what the node inside of the element will be. In this case, I am simply place a child text node inside of the `<li>`.
+Notice that the first argument defines which HTML element I want to represent. The second argument defines the attributes/props on the `<li>`.  And, the third argument defines what the node inside of the element will be. In this case, I am simply place a child text node (i.e. `'one'`) inside of the `<li>`.
 
 At this point all I've done is create a React element node containing a React text node that I have stored into the variable `reactNodeLi`. To create a virtual DOM next we have to actually render the React element node to a real DOM. To do this we use the `ReactDOM.render()` function.
 
@@ -20,8 +20,8 @@ ReactDOM.render(reactNodeLi, document.getElementById('app'));
 
 The above code, loosely stated, would invoke the following:
 
-1. find the element in an HTML page with an id of `app` 
-2. create a virtual DOM constructed from the React element node passed in 
+1. find the element in an HTML page with an id of `app`
+2. create a virtual DOM constructed from the React element node passed in
 3. use the virtual DOM to re-construct a real DOM branch
 4. inserted real DOM branch (i.e. `<li id="li1">one</li>`) into the DOM as a child node of `<div id="app"></div>`.  
 
@@ -52,7 +52,7 @@ var rElmLi3 = React.createElement('li', {id:'li3'}, 'three');
 var reactElementUl = React.createElement('ul', {className:'myList'}, rElmLi1,rElmLi2,rElmLi3);
 ```
 
-Before rendering the unordered list to the DOM I think it is worth showing that the above code can be simplified by using the `React.createElement()` in place of variables. This also demonstrates how a hierarchy or DOM branch can be defined using JavaScript. 
+Before rendering the unordered list to the DOM I think it is worth showing that the above code can be simplified by using the `React.createElement()` in place of variables. This also demonstrates how a hierarchy or DOM branch can be defined using JavaScript.
 
 ```js
 var reactElementUl = React.createElement(
@@ -103,7 +103,3 @@ tfoot th thead time title tr track u ul var video wbr
 circle clipPath defs ellipse g image line linearGradient mask path pattern
 polygon polyline radialGradient rect stop svg text tspan
 ```
-
-
-
-
